--- a/.github/workflows/build-test-report.yml
+++ b/.github/workflows/build-test-report.yml
@@ -18,6 +18,10 @@ jobs:
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
+      #Fixes the "./gradlew build" Permission denied error
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
       # Runs the Gradle build task, but without running the JUnit tests
       - name: Run the Gradle Build
